1-syntax-analyzer/test-cases/test_case_2_error.c
// error 
#include <stdio.h>

// main function of the program
int main () {
     int 9c;
     printf("9c is not a valid identifier\n");
     int 91_DC;
     printf("91_DC is not a valid identifier\n");
     
}